--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -1,9 +1,24 @@
 % Appendix A
 
-\chapter{SCRIPTS DE LAMMPS} % Main appendix title
+\chapter{LAMMPS} % Main appendix title
 
 \label{AA} % For referencing this appendix elsewhere, use \ref{AppendixA}
 
-\lhead{Anexo A. \emph{SCRIPTS DE LAMMPS}} % This is for the header on each page - perhaps a shortened title
+\lhead{Anexo A. \emph{LAMMPS}} % This is for the header on each page - perhaps a shortened title
 
-ASD
+Pequeña introducción acá
+
+\section{Instalación}
+\label{AA_1}
+
+Instrucciones de instalación acá
+
+\section{Automatización}
+\label{AA_2}
+
+Instrucciones de scripts acá
+
+\section{Datos de salida}
+\label{AA_3}
+
+Instrucciones para análisis de datos de salida -> herramientas estadísticas.
