Trabajo sobre apendice B

--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -6,7 +6,7 @@
 
 \lhead{Anexo A. \emph{LAMMPS}} % This is for the header on each page - perhaps a shortened title
 
-Pequeña introducción acá
+\href{lammps.sandia.gov}{LAMMPS} es un simulador de Dinámica Molecular diseñado por los laboratorios Sandia
 
 \section{Instalación}
 \label{AA_1}
