abstract, agradecimientos, captions, termostato

--- a/main.tex
+++ b/main.tex
@@ -152,7 +152,18 @@ Fecha:\\
 
 \abstract{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
-\Large{ESCRIBIR ABSTRACT}\ldots
+\Large{Los metales amorfos, es decir, sin estructura cristalina (también llamados vidrios metálicos);
+son cada vez más utilizados en la actualidad, mostrando un gran potencial como materiales avanzados para la ingeniería, debido a sus notables propiedades, entre las cuales destacan una alta dureza, moldeabilidad, resiliencia, resistencia mecánica y resistencia al desgaste. Todas estas propiedades permiten la obtención de partes resistentes con formas complejas que aumentan la posibilidad de usos industriales de estos materiales. Sin embargo, estas aplicaciones se ven restringidas por la heterogeneidad del régimen plástico.
+
+Para lograr una mejor comprensión del régimen plástico se puede proceder con dos enfoques principales: haciendo foco en el comportamiento a escala nanométrica o utilizando mecánica del continuo. Para el primer enfoque, las simulaciones con dinámica molecular (MD) son frecuentemente utilizadas. La dinámica molecular puede resolver problemas en los cuales interactúan muchos cuerpos (átomos), mediante la aplicación de un potencial interatómico. Así, este enfoque es útil para el estudio de propiedades a escala nanométrica, tales como la deformación, la tensión, la temperatura, entre otras.
+
+También podemos usar simulaciones de MD para identificar procesos plásticos en BMGs (Bulk Metalic Glasses, vidrios metálicos volumétricos). La plasticidad comienza con la formación de zonas de transformación de tensión cortante (STZ), las cuales se nuclean, formando bandas de corte a medida que la deformación aumenta. Las bandas de corte (SB) pueden provocar una fractura frágil en el material debido a la deformación heterogénea. De allí la importancia de prevenir o retrasar su propagación. En los metales cristalinos se procede de forma similar al obstaculizar la propagación de dislocaciones.
+
+Para controlar y por consiguiente mejorar la dinámica de la plasticidad, la composición de los vidrios metálicos se modifica de diferentes maneras. Entre ellas, encontramos la inclusión de nanopartículas cristalinas y la inclusión de nanoporos. Ambas logran obstaculizar la propagación y crecimiento de SBs y se obtiene una deformación más reducida y homogénea en régimen plástico.
+
+En este trabajo se presentan diversos estudios y sus resultados. Por un lado, el estudio de una matriz amorfa bajo diferentes condiciones de carga y temperatura. Por otro lado, resultados para los dos casos de composición modificada nombrados anteriormente: agregado de inclusiones de cobre cristalino con estructura de cubo centrada en las caras (FCC) y el sinterizado de un vidrio metálico a partir de nanopartículas de BMG, lo cual resulta en muestras con cierta porosidad.
+
+}
 }
 
 \clearpage % Start a new page
@@ -165,7 +176,15 @@ Fecha:\\
 
 \acknowledgements{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
-\Large{AGRADECIMIENTOS ACA, don't forget to include your project advisor\ldots}
+\Large{Queremos agradecerle a nuestro director Claudio Careglio y a nuestro co-director Eduardo Bringa por habernos acompañado y guiado a lo largo del desarrollo de esta investigación, ya que sin su paciencia y voluntad no hubiésemos podido llevar adelante todos los estudios que aquí se presentan.
+
+Agradecemos también a M. Falk, C. Maloney and A.M. Furlani por sus provechosos comentarios y al Dr S. Luo del Laboratorio Nacional de Los Alamos por habernos facilitado la muestra de vidrio metálico y las tables de interacción atómica con la que hemos hecho nuestras simulaciones.
+
+Desde ya, a nuestras familias por el apoyo incondicional durante todo el camino recorrido en esta casa de estudios.
+
+Las simulaciones fueron financiadas por los proyectos de investigación "06/B235 Study of amorphous materials" y “B008 Study of possible improvements of the mechanical properties of metallic glasses”.
+
+}
 }
 \clearpage % Start a new page
 
