--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -15,40 +15,6 @@
 @string{nat = {Nature}}
 @string{pnasus = {P. Natl. Acad. Sci. USA}}
 
-@article{setfl,
-
-	Author = {O'Brien, C.},
-	Title = {Formatting EAM Potentials},
-	url = {https://sites.google.com/a/ncsu.edu/cjobrien/tutorials-and-guides/eam}}
-
-@article{Wisitsorasak12,
-
-	Author = {Wisitsorasak, A. and Wolynes, P. G.},
-	Journal = pnasus,
-	Volume = 109,
-	Pages = {16068–16072},
-	Title = {On the strength of glasses},
-	Year = {2012}}
-	
-
-@article{cohen61,
-
-	Author = {Cohen, M. H. and Turnbull, D.},
-	Journal = nat,
-	Volume = {189},
-	Pages = {131},
-	Title = {Composition Requirements for Glass Formation in Metallic and Ionic Systems},
-	Year = {1961}}
-	
-
-@article{duwez60,
-
-	Author = {Fourie, J. T. and Weinberg, F. and Boswell, F. W. C},
-	Journal = jap,
-	Volume = {31},
-	Pages = {1136},
-	Title = {Preparation of Tin Single Crystals for Transmission Electron Microscopy},
-	Year = {1960}}
 
 @article{adibi13,
 
@@ -74,7 +40,8 @@
 	Volume = {67},
 	Pages = {94-103},
 	Title = {Enhancing the plasticity of metallic glasses: \textsc{S}hear band formation, nanocomposites and nanoglasses investigated by molecular dynamics simulations},
-	Year = {2013}}
+	Year = {2013}
+}
 
 
 @Book{allen87,
@@ -82,6 +49,26 @@
   title = 	 {Computer simulation of liquids},
   publisher = 	 {Oxford University Press},
   year = 	 1987
+}
+
+@Article{andrievski13,
+  author = 	 {Andrievski, R.A.},
+  title = 	 {Metallic nano/microglasses: new approaches in nanostructured materials science},
+  journal = 	 {Phys.-Usp.},
+  year = 	 2013,
+  volume =	 56,
+  number =	 3,
+  pages = 	 {261-268}
+}
+
+@Article{andrievski14,
+  author = 	 {Andrievski, R.A.},
+  title = 	 {Nanostructures under extremes},
+  journal = 	 {Phys.-Usp.},
+  year = 	 2014,
+  volume =	 57,
+  number =	 10,
+  pages = 	 {945-958}
 }
 
 @Article{arman10,
@@ -153,7 +140,8 @@
 	Journal = prb,
 	volume = {78},
 	pages = {014207},
-	year = {2008}}
+	year = {2008}
+}
 
 @Article{cheng09,
   author = 	 {Cheng, Y.Q. and Ma, E. and Sheng, H.W.},
@@ -173,6 +161,16 @@
   pages =	 {1800-1807}
 }
 
+@article{cohen61,
+
+	Author = {Cohen, M. H. and Turnbull, D.},
+	Journal = nat,
+	Volume = {189},
+	Pages = {131},
+	Title = {Composition Requirements for Glass Formation in Metallic and Ionic Systems},
+	Year = {1961}
+}
+
 @Article{daw84,
   author = 	 {Daw, M. and Baskes, M.I.},
   title = 	 {Embedded-atom method: \textsc{D}erivation and application to impurities, surfaces, and other defects in metals},
@@ -180,6 +178,16 @@
   year = 	 1984,
   volume =	 29,
   pages =	 {6443-6453}
+}
+
+@article{duwez60,
+
+	Author = {Fourie, J. T. and Weinberg, F. and Boswell, F. W. C},
+	Journal = jap,
+	Volume = {31},
+	Pages = {1136},
+	Title = {Preparation of Tin Single Crystals for Transmission Electron Microscopy},
+	Year = {1960}
 }
 
 @Article{greer95,
@@ -248,6 +256,15 @@
   pages =	 195501
 }
 
+@Article{kuo14,
+  author = 	 {Kuo, C.N. and Huang, J.C. and Li, J.B. and Jang, J.S.C. and Lin, C.H. and Nieh, T.G.},
+  title = 	 {Effects of \textsc{B}2 precipitate size on transformation-induced plasticity of \textsc{C}u-\textsc{Z}r-\textsc{A}l glassy alloys},
+  journal = 	 {Journal of Alloys and Compounds},
+  year = 	 2014,
+  volume =	 590,
+  pages = 	 {453-458}
+}
+
 @Book{liebermann93,
   author = 	 {Liebermann, H.},
   title = 	 {Rapidly \textsc{S}olidified \textsc{A}lloys},
@@ -306,7 +323,8 @@
 	Numpages = {8},
 	Pages = {603-611},
 	Title = {Critical length scales for the deformation of amorphous metals containing nanocrystals},
-	Year = {2007}}
+	Year = {2007}
+}
 
 @Book{malvern69,
   author = 	 {Malvern, L.},
@@ -375,6 +393,13 @@
   volume =	 55,
   number = 	 12,
   pages = 	 {4067-4109}
+}
+
+@article{setfl,
+
+	Author = {O'Brien, C.},
+	Title = {Formatting EAM Potentials},
+	url = {https://sites.google.com/a/ncsu.edu/cjobrien/tutorials-and-guides/eam}
 }
 
 @Article{shimizu07,
@@ -471,6 +496,16 @@
 	url = "http://www.sciencedirect.com/science/article/pii/S0925838814019008",
 	author = "Wei, R. and Wang, X.L. and Yang, S. and Jiang, F. and He, L."}
 
+@article{Wisitsorasak12,
+
+	Author = {Wisitsorasak, A. and Wolynes, P. G.},
+	Journal = pnasus,
+	Volume = 109,
+	Pages = {16068–16072},
+	Title = {On the strength of glasses},
+	Year = {2012}
+}
+	
 @Article{xiao12,
   author = 	 {Xiao, Q. and Sheng, H.W. and Shi, Y.},
   title = 	 {Dominant shear band observed in an amorphous \textsc{Z}r\textsc{C}u\textsc{A}l nanowires under simulated compression},
