--- a/Thesis.cls
+++ b/Thesis.cls
@@ -296,7 +296,7 @@
 {
   \btypeout{Abstract Page}
   \thispagestyle{empty}
-  \null\vfil
+  %\null\vfil
   \begin{center}
     \setlength{\parskip}{0pt}
     {\normalsize \UNIVNAME \par} % University name in capitals
