--- a/main.tex
+++ b/main.tex
@@ -178,7 +178,7 @@ En este trabajo se presentan diversos estudios y sus resultados. Por un lado, el
 
 \Large{Queremos agradecerle a nuestro director Claudio Careglio y a nuestro co-director Eduardo Bringa por habernos acompañado y guiado a lo largo del desarrollo de esta investigación, ya que sin su paciencia y voluntad no hubiésemos podido llevar adelante todos los estudios que aquí se presentan.
 
-Agradecemos también a M. Falk, C. Maloney and A.M. Furlani por sus provechosos comentarios y al Dr S. Luo del Laboratorio Nacional de Los Alamos por habernos facilitado la muestra de vidrio metálico y las tables de interacción atómica con la que hemos hecho nuestras simulaciones.
+Agradecemos también a M. Falk, C. Maloney y A.M. Furlani por sus provechosos comentarios y al Dr S. Luo del Laboratorio Nacional de Los Alamos por habernos facilitado la muestra de vidrio metálico y las tablas de interacción atómica con la que hemos realizado nuestras simulaciones.
 
 Desde ya, a nuestras familias por el apoyo incondicional durante todo el camino recorrido en esta casa de estudios.
 
