--- a/Appendices/AppendixC.tex
+++ b/Appendices/AppendixC.tex
@@ -69,7 +69,115 @@ las entradas del manual, utilizando el comando \textit{man}, seguido por el nomb
 
 \subsection{EXPRESIONES CONDICIONALES Y LOOPS}
 
+Las expresiones condicionales y loops o bucles forman parte de prácticamente todos los lenguajes de programación. Los lenguajes de shell script
+no son la excepción. Suele resultar más engorroso utilizarlos que en otros lenguajes, ya que las expresiones de comparación son diferentes
+y un espacio mal ubicado puede hacer fallar el programa.
+\begin{lstlisting}
+#!/bin/bash
+let cond=1
+let cond2=2
+if [ $1 -le $cond ];
+then
+        echo "menor a 1"
+elif [ $1 -gt $cond2 ];
+then
+        echo "mayor a 2"
+else
+        echo "entre 1 y 2"
+fi
+\end{lstlisting}
+\begin{lstlisting}
+#!/bin/bash
+i=$1
+while [ $i -le $2 ];
+do
+        echo $i
+        let i=i+1
+done
+\end{lstlisting}
 
+La ubicación de los espacios parece caprichosa, pero es necesario que se dejen los espacios como se presentan aquí. Por ejemplo, el comando
+\textit{let}
+permite asignar un valor numérico a una variable. Si en vez de \textit{let cond=1} se hubiese escrito \textit{let cond = 1} el interpretador
+hubiese arrojado error. Otro ejemplo se da en las expresiones de decisión condicional (\textit{if then else}) y  en las expresiones de terminación
+de bucles: si se hubiese escrito \textit{if [\$1 -le \$cond]} el interpretador hubiese arrojado error por no dejar espacios entre variables y
+corchetes.
 
+Las expresiones de comparación no se basan en símbolos, como en la mayoría de los lenguajes de programación. En la tabla~\ref{AC:tbl:comp}
+se muestran las expresiones.
+\begin{table}[htp]
+\begin{center}
+\begin{tabular}{*{2}{c}}
+\hline
+-eq&	igual (equal)\\ \hline
+-ne&	desigual (not equal to)\\ \hline
+-lt&	menor a (less than)\\ \hline
+-le&	menor o igual a (less than or equal to)\\ \hline
+-gt&	mayor a (greater than)\\ \hline
+-ge&	mayor o igual a (greater than or equal to)\\ \hline
+\end{tabular}
+\end{center}
+\caption[Expresiones de comparación en shell script.]{Expresiones de comparación en shell script.}
+\label{AC:tbl:comp}
+\end{table}
 
 \section{AWK}
+
+Awk es una excelente herramienta para procesar tablas de datos, y una vez que se aprende el lenguaje que utiliza awk resulta más sencillo de
+aplicar y más rápida que otras herramientas.
+
+La estructura básica de un comando awk desde consola es la siguiente:
+\begin{lstlisting}
+awk 'BEGIN { print "START" }
+	   { print $1      }
+     END   { print "STOP"  }' file
+\end{lstlisting}
+
+Donde se aplica el comando al archivo \textit{file}. En la porción de \textit{BEGIN} deben incluirse todas las inicializaciones de variables
+y configuraciones necesarias (por ejemplo, la definición de los separadores de campos \textit{FS}). En la porción de \textit{END} normalmente
+se incluyen comandos de escritura. En la porción intermedia se realiza todo el procesamiento de los datos.
+\begin{lstlisting}
+ awk 'BEGIN {}
+      {
+      counter=0
+	for(i=1;i<=10;i++) {
+	    if(i!=NR) {
+		counter+=i
+	    }
+	}
+	print counter;
+      } 
+      {
+      counter=0
+	for(i=1;i<=10;i++) {
+	    if(i!=NR) {
+		counter+=$i
+	    }
+	}
+	print counter;
+      }
+      END {}' archivoDePrueba
+\end{lstlisting}
+
+En el código presentado, es posible apreciar que es un lenguaje similar a C. Los bucles y expresiones condicionales se realizan de igual manera que
+en C. La gran diferencia reside en que, por defecto, awk ejecuta las porciones de código entre corchetes (aquellas que no están precedidas ni por 
+BEGIN ni por END) tantas veces como número de registros (filas) haya en el archivo de entrada. Es decir que con un archivo que contenga 10 filas, ejecutará
+10 veces las porciones de código intermedias. Esto permite iterar fácilmente a través de todo el archivo y acceder de forma sencilla al valor de
+las columnas o campos. A éstos valores se accede haciendo uso del símbolo \$. \$1 dará acceso al valor del primer campo o columna.
+
+Además del signo \$, hay palabras que están reservadas. Presentamos algunas en la tabla~\ref{AC:tbl:awkReserved}.
+\begin{table}[htp]
+\begin{center}
+\begin{tabular}{*{2}{c}}
+\hline
+FS&	Separador de campos o columnas (Field Separator)\\ \hline
+NF&	Número de campos (Number of Fields)\\ \hline
+RS&	Separador de registros o filas (Record Separator)\\ \hline
+NR&	Número de registro actual (Number of input record)\\ \hline
+OFS&	Separador de campos en la salida (Output field separator)\\ \hline
+ORS&	Separador de registros en la salida (Output record separator)\\ \hline
+\end{tabular}
+\end{center}
+\caption[Expresiones reservadas en awk.]{Expresiones reservadas en awk.}
+\label{AC:tbl:awkReserved}
+\end{table}
