--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -14,6 +14,58 @@
 @string{nl ={Nano Lett.}}
 @string{nat = {Nature}}
 @string{pnasus = {P. Natl. Acad. Sci. USA}}
+@string{mad = {Mater. Design}}
+@string{natmat = {Nat. Mater.}}
+
+@article{kuo14,
+	title = "Effects of B2 precipitate size on transformation-induced plasticity of Cu–Zr–Al glassy alloys ",
+	journal = jac,
+	volume = "590",
+	number = "0",
+	pages = "453 - 458",
+	year = "2014",
+	note = "",
+	issn = "0925-8388",
+	doi = "http://dx.doi.org/10.1016/j.jallcom.2013.12.156",
+	url = "http://www.sciencedirect.com/science/article/pii/S0925838813031356",
+	author = "C.N. Kuo and J.C. Huang and J.B. Li and J.S.C. Jang and C.H. Lin and T.G. Nieh"}
+
+@article{Dongchan10,
+
+	Author = {Dongchan, J. and Greer, J. R},
+	Journal = {natmat},
+	Volume = {9},
+	Pages = {215-219},
+	Title = {Transition from a strong-yet-brittle to a stronger-and-ductile state by size reduction of metallic glasses},
+	Year = {2010}}
+
+@article{Demetriou11,
+
+	Author = {Demetriou, M. D. and Launey, M. E. and Garrett, G. and Schramm, J. P. and Hofmann, D. C. and Johnson, W. L. and Ritchie, R. O.},
+	Journal = {natmat},
+	Volume = {10},
+	Pages = {123-128},
+	Title = {A damage-tolerant glass},
+	Year = {2011}}
+
+@article{Axinte11,
+	
+	Author = {Axinte, E.},
+	Journal = {mad},
+	Volume = {35},
+	Pages = {518-556},
+	Title = {Metallic glasses from ``alchemy'' to pure science: Present and future of design,
+processing and applications of glassy metals},
+	Year = {2011}}
+
+@article{Zheng12,
+
+	Author = {Zheng, N. and Qu, R. T. and Pauly, S. and Calin M. and Gemming T.},
+	Journal = {apl},
+	Volume = {100},
+	Pages = {141901},
+	Title = {Design of ductile bulk metallic glasses by adding ``sof'' atoms},
+	Year = {2012}}
 
 @article{setfl,
 
