intro cap 4. algo de B2. Rm not used figures.

--- a/main.tex
+++ b/main.tex
@@ -106,25 +106,25 @@
 %	Your institution may give you a different text to place here
 %----------------------------------------------------------------------------------------
 
-\Declaration{
+%\Declaration{
 
-\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
+%\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
-Nosotros, \authorx \hspace{2mm}y \authory, declaramos que esta tesis titulada, '\ttitle' y el trabajo presentado son nuestros. Confirmamos que:
+%Nosotros, \authorx \hspace{2mm}y \authory, declaramos que esta tesis titulada, '\ttitle' y el trabajo presentado son nuestros. Confirmamos que:
 
-\begin{itemize} 
-\item[\tiny{$\blacksquare$}] \Large{PONER AQUI LOS ITEMS DE LA DECLARACION DE AUTORIA}
-\\
-\end{itemize}
+%\begin{itemize} 
+%\item[\tiny{$\blacksquare$}] \Large{PONER AQUI LOS ITEMS DE LA DECLARACION DE AUTORIA}
+%\\
+%\end{itemize}
  
-Firmas:\\
-\rule[1em]{36em}{0.5pt} % This prints a line for the signature
+%Firmas:\\
+%\rule[1em]{36em}{0.5pt} % This prints a line for the signature
  
-Fecha:\\
-\rule[1em]{36em}{0.5pt} % This prints a line to write the date
-}
+%Fecha:\\
+%\rule[1em]{36em}{0.5pt} % This prints a line to write the date
+%}
 
-\clearpage % Start a new page
+%\clearpage % Start a new page
 
 %----------------------------------------------------------------------------------------
 %	QUOTATION PAGE
@@ -236,15 +236,15 @@ Las simulaciones fueron financiadas por los proyectos de investigación "06/B235
 %	PHYSICAL CONSTANTS/OTHER DEFINITIONS
 %----------------------------------------------------------------------------------------
 
-\clearpage % Start a new page
+%\clearpage % Start a new page
 
-\lhead{\emph{Physical Constants}} % Set the left side page header to "Physical Constants"
+%\lhead{\emph{Physical Constants}} % Set the left side page header to "Physical Constants"
 
-\listofconstants{lrcl} % Include a list of Physical Constants (a four column table)
-{
-Constante de Boltzmann & $k_{B}$ & $=$ & $1.380\ 65\ \times10^{-23}\ \mbox{J}\mbox{K}^{-\mbox{1}}$ \\
+%\listofconstants{lrcl} % Include a list of Physical Constants (a four column table)
+%{
+%Constante de Boltzmann & $k_{B}$ & $=$ & $1.380\ 65\ \times10^{-23}\ \mbox{J}\mbox{K}^{-\mbox{1}}$ \\
 % Constant Name & Symbol & = & Constant Value (with units) \\
-}
+%}
 
 %----------------------------------------------------------------------------------------
 %	SYMBOLS
