--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -80,6 +80,13 @@
   pages = 	 144201
 }
 
+@Book{askeland98,
+  author =	 {Askeland, D.R.},
+  title = 	 {The \textsc{S}cience and \textsc{E}ngineering of \textsc{M}aterials},
+  publisher = 	 {PWS},
+  year = 	 1998
+}
+
 @Article{ashby06,
   author = 	 {Ashby, M.F. and Greer, A.L.},
   title = 	 {Metallic \textsc{G}lasses as structural materials},
