cambios bib y cap5

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -17,44 +17,6 @@
 @string{mad = {Mater. Design}}
 @string{natmat = {Nat. Mater.}}
 
-@article{Dongchan10,
-
-	Author = {Dongchan, J. and Greer, J. R},
-	Journal = {natmat},
-	Volume = {9},
-	Pages = {215-219},
-	Title = {Transition from a strong-yet-brittle to a stronger-and-ductile state by size reduction of metallic glasses},
-	Year = {2010}}
-
-@article{Demetriou11,
-
-	Author = {Demetriou, M. D. and Launey, M. E. and Garrett, G. and Schramm, J. P. and Hofmann, D. C. and Johnson, W. L. and Ritchie, R. O.},
-	Journal = {natmat},
-	Volume = {10},
-	Pages = {123-128},
-	Title = {A damage-tolerant glass},
-	Year = {2011}}
-
-@article{Axinte11,
-	
-	Author = {Axinte, E.},
-	Journal = {mad},
-	Volume = {35},
-	Pages = {518-556},
-	Title = {Metallic glasses from ``alchemy'' to pure science: Present and future of design,
-processing and applications of glassy metals},
-	Year = {2011}}
-
-@article{Zheng12,
-
-	Author = {Zheng, N. and Qu, R. T. and Pauly, S. and Calin M. and Gemming T.},
-	Journal = {apl},
-	Volume = {100},
-	Pages = {141901},
-	Title = {Design of ductile bulk metallic glasses by adding ``sof'' atoms},
-	Year = {2012}}
-
-
 @article{adibi13,
 
 	Author = {Adibi, S. and Sha, Z.D. and Branicio, P.S. and Joshi, S.P. and Liu, Z.S. and Zhang, Y.W.},
@@ -81,7 +43,6 @@ processing and applications of glassy metals},
 	Title = {Enhancing the plasticity of metallic glasses: \textsc{S}hear band formation, nanocomposites and nanoglasses investigated by molecular dynamics simulations},
 	Year = {2013}
 }
-
 
 @Book{allen87,
   author =	 {Allen, M.P. and Tildesley, D.J.},
@@ -133,6 +94,17 @@ processing and applications of glassy metals},
   year = 	 2006,
   volume =	 54,
   pages =	 {321-326}
+}
+
+@article{Axinte11,
+	
+	Author = {Axinte, E.},
+	Journal = {mad},
+	Volume = {35},
+	Pages = {518-556},
+	Title = {Metallic glasses from ``alchemy'' to pure science: Present and future of design,
+processing and applications of glassy metals},
+	Year = {2011}
 }
 
 @Article{bringa05,
@@ -224,6 +196,26 @@ processing and applications of glassy metals},
   year = 	 1984,
   volume =	 29,
   pages =	 {6443-6453}
+}
+
+@article{Demetriou11,
+
+	Author = {Demetriou, M. D. and Launey, M. E. and Garrett, G. and Schramm, J. P. and Hofmann, D. C. and Johnson, W. L. and Ritchie, R. O.},
+	Journal = {natmat},
+	Volume = {10},
+	Pages = {123-128},
+	Title = {A damage-tolerant glass},
+	Year = {2011}
+}
+
+@article{Dongchan10,
+
+	Author = {Dongchan, J. and Greer, J. R},
+	Journal = {natmat},
+	Volume = {9},
+	Pages = {215-219},
+	Title = {Transition from a strong-yet-brittle to a stronger-and-ductile state by size reduction of metallic glasses},
+	Year = {2010}
 }
 
 @article{duwez60,
@@ -588,6 +580,16 @@ processing and applications of glassy metals},
   volume =	 23,
   number = 	 6,
   pages = 	 {747-767}
+}
+
+@article{Zheng12,
+
+	Author = {Zheng, N. and Qu, R. T. and Pauly, S. and Calin M. and Gemming T.},
+	Journal = {apl},
+	Volume = {100},
+	Pages = {141901},
+	Title = {Design of ductile bulk metallic glasses by adding ``sof'' atoms},
+	Year = {2012}
 }
 
 @comment $Id: amcapaper.bib,v 1.6 2006/08/16 17:17:53 mstorti Exp $
